--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-language: node_js
- node_js:
- - "stable"
- cache:
- directories:
-   - node_modules
- script:
- - npm test
- - npm run build
+sudo: required
+services:
+  - docker
+
+before_install:
+  - docker build -t ayaEsmail99/docker-react -f Dockerfile.dev .
+
+script:
+  - docker run -e CI=true ayaEsmail99/docker-react npm run test
